--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Backend projet STORE",
   "main": "lib/API/app.js",
   "scripts": {
+    
     "start": "tsc && node lib/API/app.js",
     "dev": "tsc-watch --onSuccess \"node lib/API/app.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,10 +12,16 @@
   "author": "AESPA'CE WEB",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "swagger-autogen": "^2.23.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
+    "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.0"
   }
 }
