--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
+  "scripts": {
+    "build": "tsc",
+    "start": "node ./lib/API/app.js"
+  },
   "dependencies": {
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "pg": "^8.13.1"
